# iitm_rag_project

./: .gitignore  ingestion.py  llm_generated_ingestion.py  main.py  pyproject.toml  requirements.txt  test.py
.chroma-extra/615bf32a-0d4e-4663-9363-f106fb945102/: index_metadata.pickle
.chroma-extra/ee10a5ce-05b0-4ec7-a0aa-6971984fc6e1/: index_metadata.pickle
graph/: graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/nodes/: generate.py  grade_documents.py  web_search.py
